feat: add xiaohongshu

--- a/src/modules/processing/servicesConfig.json
+++ b/src/modules/processing/servicesConfig.json
@@ -137,6 +137,11 @@
                 "share/:shareType/:id"
             ],
             "enabled": true
+        },
+        "xhslink": {
+            "alias": "xiaohongshu.com",
+            "patterns": ["A/:id"],
+            "enabled": true
         }
     }
 }
